// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux/reducers/serviceApi/passwordForgotten error 1`] = `
Object {
  "emailAuth": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordForgotten": Object {
    "data": undefined,
    "error": Object {
      "message": "serviceApi/FORGOT_PASSWORD request failed",
      "response": undefined,
    },
    "loading": false,
  },
  "passwordReset": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
}
`;

exports[`redux/reducers/serviceApi/passwordForgotten refresh 1`] = `
Object {
  "emailAuth": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordForgotten": Object {
    "data": Object {},
    "error": undefined,
    "loading": true,
  },
  "passwordReset": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
}
`;

exports[`redux/reducers/serviceApi/passwordForgotten start 1`] = `
Object {
  "emailAuth": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordForgotten": Object {
    "data": undefined,
    "error": undefined,
    "loading": true,
  },
  "passwordReset": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
}
`;

exports[`redux/reducers/serviceApi/passwordForgotten success 1`] = `
Object {
  "emailAuth": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
  "passwordForgotten": Object {
    "data": Object {},
    "error": undefined,
    "loading": false,
  },
  "passwordReset": Object {
    "data": undefined,
    "error": undefined,
    "loading": false,
  },
}
`;
